--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h2>How do you want your project to be</h2>
+    <div class="toggle-container">
+      <div class="g1 toggle-switch">
+        <input type="checkbox" name="good" id="good" class="checkbox" />
+        <label for="good"></label>
+        <span>Good</span>
+      </div>
+      <div class="g2 toggle-switch">
+        <input type="checkbox" name="cheap" id="cheap" class="checkbox" />
+        <label for="cheap"></label>
+        <span>Cheap</span>
+      </div>
+      <div class="g3 toggle-switch">
+        <input type="checkbox" name="fast" id="fast" class="checkbox" />
+        <label for="fast"></label>
+        <span>Fast</span>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
