--- a/main.html
+++ b/main.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>How do you want your project to be</h2>
+    <h2>How do you want your project to be?</h2>
     <div class="toggle-container">
       <div class="g1 toggle-switch">
         <input type="checkbox" name="good" id="good" class="checkbox" />
         <label for="good"></label>
-        <span>Good</span>
+        <span id="g1">Good</span>
       </div>
       <div class="g2 toggle-switch">
         <input type="checkbox" name="cheap" id="cheap" class="checkbox" />
         <label for="cheap"></label>
-        <span>Cheap</span>
+        <span id="g2">Cheap</span>
       </div>
       <div class="g3 toggle-switch">
         <input type="checkbox" name="fast" id="fast" class="checkbox" />
         <label for="fast"></label>
-        <span>Fast</span>
+        <span id="g3">Fast</span>
       </div>
     </div>
     <script src="script.js"></script>
